--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kelompok 15</title>
+	<title>Kelompok Jarkom</title>
 </head>
 <body>
 	<h1>Hallo berhasil 200 OK</h1>
-	<p>Defryan Aprisandani</p>
-    <p>Kharisma Ayu</p>
+	<p>Amanda Soesilawati</p>
+    <p>Amelinda Nur Syifa</p>
 </body>
 </html>
