--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Hallo berhasil 200 OK</h1>
-	<p>Amanda Soesilawati</p>
+	<p>Amanda Soesilowati</p>
     <p>Amelinda Nur Syifa</p>
 </body>
 </html>
